# forumbot

./: .env.example  .env.unittests  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  app.py  build_docker.sh  compose.yaml  constants.py  pyproject.toml  requirements.txt  run_docker.sh
.github/workflows/: CI.yml  build.yml  tests.yml
.run/: app.run.xml
src/: app.py  client.py  constants.py  gantt.py  mailing.py  tasks.py  utils.py
src/tasks/: announce_plenum.py  distribute_voucher.py  hello_world.py  plenum_reminder.py  voucher.py
src/tasks/plenum/: __init__.py  announce.py  post_protocol.py  remind.py
templates/: plenum.md  plenum_pad_template.md  protocol_posted.md  voucher_announcement.md  voucher_gesamtbedarf_reported.md  voucher_list_received.md  voucher_message.md  voucher_offer.md  voucher_table.md
tests/: conftest.py  test_client.py  test_mailing.py  test_tasks.py  test_template_filters.py  test_utils.py
tests/test_tasks/: conftest.py  test_announce_plenum.py  test_post_protocol.py  test_voucher.py  test_voucher_distribution_queue.py  test_voucher_ingress.py  test_voucher_pm_handling.py
tests/test_tasks/plenum/: test_announce_plenum.py
tests/test_tasks/voucher/: test_assignment.py  test_create_voucher_topic.py  test_distribution_queue.py  test_ingress.py  test_pm_handling.py  test_render_post_content.py
