[project]
name = "forumbot"
version = "0.1.0"
description = ""
authors = [{ name = "Sören Wegener", email = "soerface@flipdot.org" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "pydiscourse==1.1.1",
    "requests>=2.32.3,<3",
    "schedule==0.6.0",
    "Jinja2>=3.1.4,<4",
    "PyYAML>=6.0.2,<7",
    "numpy>=2.1.2,<3",
    "mistune==2.0.0.rc1",
    "MarkupSafe>=3.0.2,<4",
    "python-dateutil>=2.9.0.post0,<3",
    "python-dotenv>=1.0.1,<2",
    "sentry-sdk>=2.17.0,<3",
    "pytest>=8.3.3,<9",
    "babel>=2.16.0,<3",
    "pandas>=2.2.3,<3",
    "matplotlib>=3.9.2,<4",
    "pytest-responses>=0.5.1",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pre-commit>=4.0.1,<5",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
